--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <span class="fs-18s font-italic fw-600 fw-500">01/2023 - Present</span>
                                 <span class="fw-500 fs-16s fw-400">- Onemore Agency</span>
                             </div>
-                            <div class="career mg-20 fs-32s fw-600">Content Website</div>
+                            <div class="career mg-20 fs-32s fw-600">CONTENT SEO</div>
                             <div class="line"></div>
                         </li>
                         <li class="">
@@ -159,7 +159,7 @@
                                 <span class="fs-18s font-italic fw-600 fw-500">06/2021 - 12/2022</span>
                                 <span class="fw-500 fs-16s fw-400">- MOC NGUYEN COFFEE CO.,LTD</span>
                             </div>
-                            <div class="career mg-20 fs-32s fw-600">Content Writer</div>
+                            <div class="career mg-20 fs-32s fw-600">CONTENT WRITER</div>
                             <div class="line"></div>
                         </li>
                         <li class="">
