--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="nav--top navigation fs-20s">
                 <li><a class="btn__children active " href="#home">HOME</a></li>
                 <li><a class="btn__children " href="#experience">EXPERIENCE</a></li>
-                <li><a class="btn__children " href="#skill">SKILL</a></li>
+                <!-- <li><a class="btn__children " href="#skill">SKILL</a></li> -->
                 <li><a class="btn__children " href="#project">PROJECT</a></li>
                 <li><a class="btn__children " href="#contact">CONTACT</a></li>
             </ul>
@@ -107,7 +107,7 @@
                         <div class="fw-600">DINH TUYEN</div>
                     </h1>
                     <div class="description fs-32s fw-700 font-italic mg-48">
-                        Content Writer <span class="font-normal fw-500">base in</span> Vietnam
+                        Technical SEO <span class="font-normal fw-500">base in</span> Vietnam
                     </div>
                     <button class="button__contact fs-18s mg-64">
                         <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Let's talk with me</a><img
@@ -136,7 +136,7 @@
                     <h2 class="title mg-24 fs-48s fw-700">MY EXPERIENCE</h2>
                     <p class="descrip fs-18s fw-400 mg-48">
                         Hello there! My name is Dinh Tuyen.
-                        I am a Content Writer, and I'm very passionate and dedicated to my work.
+                        I am a Technical SEO, and I'm very passionate and dedicated to my work.
                     </p>
                     <button class="button__contact fs-18s">
                         <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Contact me</a><img
@@ -148,35 +148,18 @@
                     <ul>
                         <li class="">
                             <div class="mg-12">
-                                <span class="fs-18s font-italic fw-600 fw-500">01/2023 - Present</span>
+                                <span class="fs-18s font-italic fw-600 fw-500">2023 - Present</span>
                                 <span class="fw-500 fs-16s fw-400">- Onemore Agency</span>
                             </div>
-                            <div class="career mg-20 fs-32s fw-600">CONTENT SEO</div>
+                            <div class="career mg-20 fs-32s fw-600">SEO LEADER</div>
                             <div class="line"></div>
                         </li>
                         <li class="">
                             <div class="mg-12">
-                                <span class="fs-18s font-italic fw-600 fw-500">06/2021 - 12/2022</span>
+                                <span class="fs-18s font-italic fw-600 fw-500">2021 - 2022</span>
                                 <span class="fw-500 fs-16s fw-400">- MOC NGUYEN COFFEE CO.,LTD</span>
                             </div>
-                            <div class="career mg-20 fs-32s fw-600">CONTENT WRITER</div>
-                            <div class="line"></div>
-                        </li>
-                        <li class="">
-                            <div class="mg-12">
-                                <span class="fs-18s font-italic fw-600 fw-500">08/2019 - 06/2020</span>
-                                <span class="fw-500 fs-16s fw-400">- iDesign Club</span>
-                            </div>
-                            <div class="career mg-20 fs-32s fw-600">HEAD OF COMMUNICATIONS</div>
-                            <div class="line"></div>
-                        </li>
-                        <li class="">
-                            <div class="mg-12">
-                                <span class="fs-18s font-italic fw-600 fw-500">2020 - 2022</span>
-                                <span class="fw-500 fs-16s fw-400">- University of Economics - The University of
-                                    Danang</span>
-                            </div>
-                            <div class="career mg-20 fs-32s fw-600">FREELANCE GRAPHIC DESIGNER</div>
+                            <div class="career mg-20 fs-32s fw-600">MIDDLE SEO</div>
                             <div class="line"></div>
                         </li>
                     </ul>
@@ -185,7 +168,7 @@
             </div>
         </section>
 
-        <section class="page-section" id="skill">
+        <!-- <section class="page-section" id="skill">
             <div class="specialties">
                 <div class="fs-18s font-italic fw-600 mg-16">Skill</div>
                 <h2 class="title fs-48s fw-700 mg-48">MY SPECIALTIES</h2>
@@ -198,8 +181,8 @@
                         </label>
                         <div class="content__left">
                             <div class="description fs-16s">
-                                Research keywords, plan writing articles for each project. Write articles according to the set plan, implement internal & external links. Check website content with tools like Screaming Frog and conduct Audit content. Weekly/monthly report on project work and progress.
-                                </p>
+                                Research secondary keywords based on primary keywords. Write articles according to the proposed plan, deploy internal and external links. Check website content with tools like Screaming Frog and conduct content audit. Report weekly/monthly on project progress and work.   
+                            </p>
 
                             </div>
 
@@ -217,7 +200,7 @@
                         <input type="checkbox" name="" id="seemore--2" class="see__more--2">
                         <label for="seemore--2" class="skill__name fs-32s fw-700">
                             <div class="dots"></div>
-                            <p class="title__name">CONTENT CREATION</p>
+                            <p class="title__name">KEYWORDS RESEARCH</p>
                         </label>
                         <div class="content__left">
                             <div class="description fs-16s">
@@ -286,7 +269,7 @@
                 </ul>
             </div>
 
-        </section>
+        </section> -->
 
         <section class="page-section" id="project">
             <div class="recent__project">
@@ -410,12 +393,11 @@
                         <div class="infor__descrip mg-64">
                             <div class="infor__descrip--child">
                                 <div class="mg-20 year">
-                                    <div class="descrip__years fs-48s fw-700">2+</div>
+                                    <div class="descrip__years fs-48s fw-700">3+</div>
                                     <p class="fs-18s fw-700 font-italic">Years <br> experience...</p>
                                 </div>
                                 <p class="fs-18s">
-                                    I have over 2 years of experience in digital marketing, focusing on online
-                                    advertising campaigns, SEO, content management and development.
+                                    I have nearly 3 years of experience in marketing, focusing on search engine optimization campaigns and content development.
                                 </p>
                             </div>
                             <div class="infor__descrip--child">
@@ -424,7 +406,7 @@
                                     <p class="fs-18s fw-700 font-italic">Project <br> Worldwide...</p>
                                 </div>
                                 <p class="fs-18s">
-                                    I have experience in developing and implementing effective Digital Marketing campaigns, creating interaction and growth for more than 4 different brands in promotional projects.
+                                    I have experience in developing and implementing effective SEO campaigns, creating engagement and growth for more than 4 different brands in SEO projects.
                                 </p>
                             </div>
 
