--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <img src="/asset/img/avatar.png" alt="" class="avatar mg-32">
                         <h3 class="contact__name fs-48s fw-700 text-center mg-12">LE DINH TUYEN</h3>
                         <div class="description fw-700 font-italic fs-24 text-center mg-16">
-                            Content Writer <span class="font-normal fw-500">base in</span> Vietnam
+                            Technical SEO <span class="font-normal fw-500">base in</span> Vietnam
                         </div>
                         <button class="contact__downloadCV fs-18s center fw-500">
                             <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Contact me</a><img
