--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         Technical SEO <span class="font-normal fw-500">base in</span> Vietnam
                     </div>
                     <button class="button__contact fs-18s mg-64">
-                        <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Let's talk with me</a><img
+                        <a href="tel:0388983056">Let's talk with me</a><img
                             src="/asset/icon/icon-button.svg" alt="">
                     </button>
                     <ul class="icon__contact fs-18s fw-700 font-italic">
@@ -139,7 +139,7 @@
                         I am a Technical SEO, and I'm very passionate and dedicated to my work.
                     </p>
                     <button class="button__contact fs-18s">
-                        <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Contact me</a><img
+                        <a href="tel:0388983056">Contact me</a><img
                             src="/asset/icon/icon-button.svg" alt="">
                     </button>
                 </div>
@@ -342,7 +342,7 @@
                     </div>
                 </div>
                 <button class="button__contact fs-18s center">
-                    <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Contact me</a><img
+                    <a href="tel:0388983056">Contact me</a><img
                         src="/asset/icon/icon-button.svg" alt="">
                 </button>
             </div>
@@ -362,7 +362,7 @@
                             Technical SEO <span class="font-normal fw-500">base in</span> Vietnam
                         </div>
                         <button class="contact__downloadCV fs-18s center fw-500">
-                            <a target="_blank" href="https://www.facebook.com/tuyen.liam/">Contact me</a><img
+                            <a href="tel:0388983056">Contact me</a><img
                                 src="/asset/icon/icon-download-cv.svg" alt="">
                         </button>
                     </div>
