--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="fw-600">DINH TUYEN</div>
                     </h1>
                     <div class="description fs-32s fw-700 font-italic mg-48">
-                        Technical SEO <span class="font-normal fw-500">base in</span> Vietnam
+                        Digital Marketing <span class="font-normal fw-500">base in</span> Vietnam
                     </div>
                     <button class="button__contact fs-18s mg-64">
                         <a href="tel:0388983056">Let's talk with me</a><img
@@ -136,7 +136,7 @@
                     <h2 class="title mg-24 fs-48s fw-700">MY EXPERIENCE</h2>
                     <p class="descrip fs-18s fw-400 mg-48">
                         Hello there! My name is Dinh Tuyen.
-                        I am a Technical SEO, and I'm very passionate and dedicated to my work.
+                        I am a Digital Marketer, and I'm very passionate and dedicated to my work.
                     </p>
                     <button class="button__contact fs-18s">
                         <a href="tel:0388983056">Contact me</a><img
@@ -159,7 +159,7 @@
                                 <span class="fs-18s font-italic fw-600 fw-500">2021 - 2022</span>
                                 <span class="fw-500 fs-16s fw-400">- MOC NGUYEN COFFEE CO.,LTD</span>
                             </div>
-                            <div class="career mg-20 fs-32s fw-600">MIDDLE SEO</div>
+                            <div class="career mg-20 fs-32s fw-600">DIGITAL MARKETING</div>
                             <div class="line"></div>
                         </li>
                     </ul>
@@ -359,7 +359,7 @@
                         <img src="/asset/img/avatar.png" alt="" class="avatar mg-32">
                         <h3 class="contact__name fs-48s fw-700 text-center mg-12">LE DINH TUYEN</h3>
                         <div class="description fw-700 font-italic fs-24 text-center mg-16">
-                            Technical SEO <span class="font-normal fw-500">base in</span> Vietnam
+                            Digital Marketing <span class="font-normal fw-500">base in</span> Vietnam
                         </div>
                         <button class="contact__downloadCV fs-18s center fw-500">
                             <a href="tel:0388983056">Contact me</a><img
@@ -393,11 +393,11 @@
                         <div class="infor__descrip mg-64">
                             <div class="infor__descrip--child">
                                 <div class="mg-20 year">
-                                    <div class="descrip__years fs-48s fw-700">3+</div>
+                                    <div class="descrip__years fs-48s fw-700">4+</div>
                                     <p class="fs-18s fw-700 font-italic">Years <br> experience...</p>
                                 </div>
                                 <p class="fs-18s">
-                                    I have nearly 3 years of experience in marketing, focusing on search engine optimization campaigns and content development.
+                                    I have nearly 4 years of experience in marketing, focusing on search engine optimization campaigns and content development.
                                 </p>
                             </div>
                             <div class="infor__descrip--child">
@@ -406,7 +406,7 @@
                                     <p class="fs-18s fw-700 font-italic">Project <br> Worldwide...</p>
                                 </div>
                                 <p class="fs-18s">
-                                    I have experience in developing and implementing effective SEO campaigns, creating engagement and growth for more than 4 different brands in SEO projects.
+                                    I have experience in developing and implementing effective Marketing campaigns, creating engagement and growth for more than 4 different brands in Digital Marketing projects.
                                 </p>
                             </div>
 
